# hyntel

./: README.md  audit.ps1  audit.sh  pyproject.toml  setup.ps1  setup.sh
artifacts/: remediate_macos.sh
artifacts/desktop_exports/: security_audit_linux_20260420_145831.json  security_audit_linux_20260420_145859.txt  security_audit_macos_20260316_131021.json  security_audit_macos_20260316_131021.txt
security_audit_tool/: __init__.py  cli.py  gui.py  inventory.py  launcher.py  models.py  nvd.py  remediation.py  reporting.py  system_checks.py  terminal_ui.py
security_audit_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_security_audit_tool.py
